--- a/static/stat565/svm-rmarkdown-article-example.Rmd
+++ b/static/stat565/svm-rmarkdown-article-example.Rmd
@@ -1,33 +1,25 @@
 ---
-title: "STAT565_Lab"
-author: "Shen Qu"
-date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: 
   pdf_document:
-#    highlight: pygments
-geometry: margin=0.25in
-# fontfamily: mathpazo
-# fontsize: 12pt
+    citation_package: natbib
+    keep_tex: true
+    fig_caption: true
+    latex_engine: pdflatex
+    template: svm-latex-ms.tex
+title: "Lab 5 Two factor Factorial 1"
+author:
+- name: Shen Qu
+  affiliation: "`r format(Sys.time(), '%B %d, %Y')`"
+abstract: "An experiment was designed to study weight gain of rats fed four different diets, where there were two levels of protein (high or low) and two sources of protein (beef or cereal).  This gives 2 x 2 treatment combinations: high/beef (HB), high/cereal (HC), low/beef (LB), low/cereal (LC). Ten rats were in each of the four treatment groups. Use a=0.01"
+date: "`r format(Sys.time(), '%B %d, %Y')`"
+geometry: margin=0.2in
+fontfamily: mathpazo
+fontsize: 11pt
 # spacing: double
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,cache=FALSE, size="tiny",cache=FALSE, results="markup", tidy=T)
-
-# theme: default, cerulean, journal, flatly, darkly, readable, spacelab, united, cosmo, lumen, paper, sandstone, simplex, and yeti
-
-# highlight: default, tango, pygments, kate, monochrome, espresso, zenburn, haddock, and textmate
-
-#    includes:
-#      in_header: preamble.tex
-#      before_body: doc-prefix.tex
-#      after_body: doc-suffix.tex
-
-#    df_print: default, kable, tibble
-
-#    citation_package: natbib, biblatex
-
-# size = c("normalsize", "tiny", "scriptsize", "footnotesize", "small", "large", "Large", "LARGE", "huge", "Huge")
+knitr::opts_chunk$set(echo = TRUE, size="tiny",cache=FALSE, results="markup", tidy = T)
 ```
 
 ```{r eval=FALSE, include=FALSE}
@@ -64,7 +56,7 @@ ggplot(data = table_protein, aes(x = Amount, y = Gain, colour=Source, group=Sour
 
 (b) Obtain the numerical summary for each treatment combination and factor levels separately. Report them here in a tabular form.
 
-```{r echo=FALSE}
+```{r  echo=FALSE}
 favstats(Gain ~ Source, data=table_protein)
 favstats(Gain ~ Amount , data=table_protein)
 favstats(Gain ~ Source|Amount, data=table_protein)
@@ -79,7 +71,7 @@ summary(model_protein)
 
 (d) Based on the ANOVA table write your conclusion appropriately. Perform all the necessary tests and report the conclusion along with the p-value.
 
-```{r echo=FALSE}
+```{r}
 pairwise.t.test(table_protein$Gain, table_protein$Trt2, p.adj = "none") 
 
 pairwise.t.test(table_protein$Gain, table_protein$Trt2, p.adj = "bonf")
@@ -107,7 +99,8 @@ plot(model_protein, pch=16)
 (g) Report the code here without output.
 
 
-```{r , pressure, eval =F, size="footnotesize", tidy = T}
+```{r eval =F, size="tiny", tidy = TRUE}
+
 table_protein <- read_excel("Protein.xlsx")
 glimpse(table_protein)
 
@@ -158,4 +151,19 @@ TukeyHSD(model_protein, conf.level = 0.95)
 # Scheffe's test to get observed difference in means, CI and p value #
 # Install and load the DescTools package before using the ScheffeTest function #
 ScheffeTest(model_protein, conf.level = 0.95)
+
 ```
+
+
+
+
+
+
+<!--
+# References
+\setlength{\parindent}{-0.2in}
+\setlength{\leftskip}{0.2in}
+\setlength{\parskip}{8pt}
+\vspace*{-0.2in}
+\noindent
+-->
